Rework acceleration docs into first-class operator pages
Replace the raw qualification-record dumps with wiki-convention operator
documentation:
- Indicator-Acceleration.md: how it works (mermaid fallback flow), enabling
  and native classifiers, platform support matrix, supported workload,
  determinism/tolerance, diagnostics, troubleshooting triage matrix,
  rollback, and a concise qualification-status section (incl. the Linux
  CUDA handoff contract)
- ta4j-cli-operator-guide.md: command selector table, installation,
  canonical input, quick starts, input conventions, automation contract
  (envelopes, --reproducible, exit codes), troubleshooting matrix
- Delete the five raw record pages (Metal benchmark, OpenCL plan/benchmark,
  CUDA plan, Linux handoff); their evidence is folded into the status
  sections
- Home.md links both pages; README.md regenerated via sync-readme-from-home.sh